# spec-kit-zh

./: README.md  pyproject.toml  spec-driven-zh.md
.github/: .syncignore
.github/workflows/: branch-protection.yml  docs-zh.yml  release-zh.yml  sync-upstream.yml
.github/workflows/scripts-zh/: check-release-exists.zh.sh  create-github-release.zh.sh  create-release-packages.zh.ps1  create-release-packages.zh.sh  generate-release-notes.zh.sh  get-next-version.zh.sh  render_localization_issue.py  update-version.zh.sh
.github/workflows/scripts-zh/templates/: localization-issue-template.md
i18n/zh/: spec-driven.md
i18n/zh-CN/memory/: constitution.md
i18n/zh-CN/src/specify_cli/: __init__.py
i18n/zh-CN/templates/: checklist-template.md
i18n/zh-CN/templates/commands/: analyze.md  plan.md  specify.md
i18n/zh/docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  toc.yml  upgrade.md
i18n/zh/memory/: constitution.md
i18n/zh/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
i18n/zh/scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
i18n/zh/src/specify_cli/: __init__.py
i18n/zh/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
i18n/zh/templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  taskstoissues.md
