[project]
name = "specify-cli"
version = "0.0.22"
description = "Specify CLI中文版, 指向Spec Kit的中文版模板"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["i18n/zh/src/specify_cli"]

